# ILCAnaTutorial

./: README.md
DSTAnal/: .gitignore  CMakeLists.txt  clean.sh  rundst.sh
DSTAnal/doc/: Doxyfile  overview.html
DSTAnal/include/: MyDSTProcessor.h
DSTAnal/include/.svn/: entries
DSTAnal/run/: .gitignore  bsub.sh  mydstanal-nooutput.xml  mydstanal.xml  rundst-many.sh  rundst.sh
DSTAnal/src/: MyDSTProcessor.cc  MyDSTProcessor.cc.flavourTag  MyDSTProcessor.cc.simple
DSTAnal/src/.svn/: entries
LcioRoot/: .rootlogon.C  MarlinStdRecoLCTuple.xml  anajob.C
PartOne/delphes_anal/: README.md  bsub.sh  delphes_anal.py  develop.py
PartOne/mcanal/: .gitignore  bsub.sh  develop.py  e2e2anal.py  selectEvents.py
PartOne/mcmarlin/: CMakeLists.txt  README
PartOne/mcmarlin/doc/: overview.html
PartOne/mcmarlin/include/: MCMarlin.h
PartOne/mcmarlin/run/: mcmarlin.xml  run.sh
PartOne/mcmarlin/src/: MCMarlin.cc
PartOne/tools/centos7/: Howto.md  build-all-ilcsoft.sh  build-base.sh  build-ocaml.sh  build-whizard2.sh  partone-base.cfg  release-ilcsoft.cfg
PartOne/tools/ub2004/: baseinst.sh  doinstall.sh  release-base.cfg  release-versions.py
PartOne/tutorial/: init_ilcsoft.sh  runcmd.sh  runcmd1.sh  runcmd2.sh
PartOne/whizard2/: whizard2.setup
PartOne/whizard2/basic/: basic.sin
PartOne/whizard2/e2e2/: bsub.sh  e2e2.sin  run-e2e2.sh
PartOne/whizard2/higgs/: higgs.sin  run_higgs.sh
PartOne/whizard2/zprime/: bsub.sh  run_zprime.sh  zprime.sin
PartOne/zpanal/: zpanal.py
PartTwo/: setup.sh
PartTwo/ced/ced2go/: ced2go_dst-merged_higgs_e2e2h.sh  ced2go_my_tamplate.sh  ced2go_rec_higgs_e2e2h_bb.sh  find_freeport.sh  my-ced2go-template.xml  myced_steering.xml  run_myced.sh
PartTwo/ddsim/e2e2h/: bsub.sh  geodisp.sh  runddsim.sh
PartTwo/ddsim/exam01/: geodisp.sh  init_vis.mac  vis.mac  vis_ddsim.sh
PartTwo/ddsim/simple01/: geodisp.sh  vis_ddsim.sh
PartTwo/marlin/dstanal/: CMakeLists.txt  README
PartTwo/marlin/dstanal/doc/: CMakeLists.txt  Doxyfile  overview.html
PartTwo/marlin/dstanal/include/: MyDSTProcessor.h
PartTwo/marlin/dstanal/run/: bsub.sh  mydstanal.xml  rundst.sh
PartTwo/marlin/dstanal/src/: MyDSTProcessor.cc
PartTwo/marlin/no-overlay/: runmarlin.sh
PartTwo/marlin/overlay/: bsub.sh  getBGFiles.py  runoverlay.sh
bases/: CMakeLists.txt  README.md
bases/basesv5.1/: CMakeLists.txt
bases/basesv5.1/src/: bases.f  bhplot.f  bhsum.f  bscast.f  bschck.f  bsdate.f  bsdsum.f  bsetgu.f  bsinfo.f  bsinit.f  bsintg.f  bsisum.f  bsprnt.f  bsread.f  bstime.f  bswrit.f  drloop.f  drn.f  shplot.f  spchck.f  sphist.f  spinfo.f  spring.f  xhplot.f  xhsave.f
bases/example/: CMakeLists.txt
bases/example/nunugam/: intgen.cxx  nunugam.cxx  nunugam.h  testgen.cxx  testint.cxx
bases/include/: BasesSpring.h  bases_hist.h  bases_ran1.h  bases_scat.h  bases_xhist.h  bs_hist.h  bs_variable.h  hist_bin.h  hist_buff.h
bases/src/: BasesSpring.cxx  bases_hist.cxx  bases_ran1.cxx  bases_scat.cxx  bases_xhist.cxx  bs_hist.cxx  bs_variable.cxx  uxdate.cxx  uxtime.cxx
basesoft/: Howto.md  builtin-davix.patch  release-base.cfg.patch  tutorial-base.cfg
ced/: .gitignore  HowToUse.txt  glced-start  runced
ced/cedconfig/: ced-viewer.xml.in
ced2go/: ced2go-new  ced2go-new-remote_dst_merged_higgs_e2e2h  ced2go-new_dst_merged_higgs_e2e2h  ced2go_dst-merged_higgs_e2e2h  ced2go_rec_2f_Z_leptonic  ced2go_rec_ttbar
ced2go/cygCED/: README.md  cygCED-v01-09-02.tar.xz
docs/: cmake-tips.md  howto_git.md  setup-cvmfs.md
geant4/LC/LC1/: README.txt  (+1 more)
geant4/LC/LC1/LC1d/: .gitignore  CMakeLists.txt  exampleB2b.cc  simevent.mac
geant4/LC/LC1/LC1d/include/: B2PrimaryGeneratorAction.hh  B2TrackerHit.hh  B2bDetectorMessenger.hh  MyAnalysis.hh
geant4/LC/LC1/LC1d/src/: B2EventAction.cc  B2PrimaryGeneratorAction.cc  B2RunAction.cc  B2TrackerHit.cc  B2bDetectorMessenger.cc  MyAnalysis.cc
geant4/LC/LC2/LC2a/: CMakeLists.txt  README.txt  cmd_build.sh  setup.sh
geant4/LC/LC2/LC2a/src/: exampleLC2a.cc
geant4/LC/LC2/LC2e/: .gitignore  CMakeLists.txt  README.md
geant4/LC/LC2/LC2e/include/: SMPTAB.inc
geant4/LC/LC2/LC2e/python-src/: genisr.py  isrplot.py
geant4/LC/LC2/LC2e/src/: isr_function.F  isr_remnant.F  isr_simple_spectrum.F
grid/arcce-umd4/: README.md  setup-ui-umd4.sh  subcmd.sh  test.sh  test.xrsl
grid/emibasic/: README.md
grid/ilcdirac/: README.md
grid/setup/: GetStarted.md  init_dirac.sh  init_grid.sh  setup-cvmfs-ui.sh
ilddawn/: README.md
ilddawn/ddsim/: .gitignore  dawn3.mac  vis_ddsim.sh
ilddawn/scripts/: alldet.sh  avdata.sh  centerdata.sh  coilcut.sh  coildata.sh  cututil.sh  disp90  dot.DAWN_1.default  dot.DAWN_1.history  ecalcut.sh  ecaldata.sh  hcalcut.sh  hcaldata.sh  pick_pvname.py  prim2dat.sh  step2.sh  step2_lv2.sh  yoke_edit.sh
isrbs/: CMakeLists.txt  README.md  build_circe2.sh
isrbs/include/: SMCONS.inc
isrbs/src/examples/: circe2_print_spectrum_f77.F  circe2_print_spectrum_f90.f90
isrbs/src/fortran/: circe2_interface.f90
isrbs/src/python/: circe2plot.py  circeplot.py  gencirce2.py  genisr.py  isrplot.py
isrbs/test/: buildtest.sh  submain.F  subpy.py  subtest.F
lesson1/: anajob_dst-merged_higgs  anajob_rec_ttbar  dumpevent_dst-merged_higgs_e2e2h  dumpevent_rec_2f_Z_leptonic  dumpevent_rec_ttbar  init_001  recfiles-250-SetA.list  recfiles.list
python/: .gitignore  RecoilStudy.py
python/anal_lcio/: RecoilStudy.py  bsub.sh  getMCTruthLink.py
python/f2py/: README.md  build.sh  callhello.py  hello.f90
python/lcio_ntuple/: README.md  anal_ntuple.py  create_ntuple.py
runddsim/: .gitignore  runddsim.sh
runmarlin/: bsub.sh  clean.sh  runmarlin.sh
runmokka/: .gitignore  clean.sh  mokka.g4macro  mokka.steer  runmokka.sh
runoverlay/: runoverlay.sh
whizard1.95/: .gitignore  README.txt  whizard.prc
whizard1.95/tools/: bldwhiz.sh  make_rundir.sh
whizard2/: run_whizard.sh  subjob.sh  whizard2.7-gcc73.setup  whizard2.setup
whizard2/sindarin/: E250.P2f_tautau.sin  E250.P4f_munutaunu.sin  E250.P4f_ww_h.eL.pR.sin  E250.Pe2e2h.circes2.sin  E250.Pe2e2h.sin  E250.Pnnh_h2tautau.sin  aliases.sin  pythia6-parameters.sin
(+76 files in other folders)
